<resources>
    <string name="app_name">Morimint</string>


    <!-- Signing Activities -->
    <string name="usernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="rePasswordHint">Repeat</string>
    <string name="SignUp">Sign up</string>
    <string name="register">Register</string>
    <string name="SignUpToSignIn">Already an user? SIGN IN</string>
    <string name="SignIn">Sign in</string>
    <string name="ForgetPass">Forget your password?</string>
    <string name="ForgetPassHint">Please enter your email address, so we will send are set link.</string>
    <string name="emailTitle">EMAIL :</string>
    <string name="Next">Next</string>
    <string name="or">OR</string>
    <string name="Click">Click</string>
    <string name="refHint">Invitation Code (Optional)</string>

    <!-- Main  Activity  & menu item title -->
    <string name="welcomeApp">Welcome to Morimint</string>
    <string name="days">Days</string>
    <string name="levelText">Level</string>
    <string name="forYou">FOR YOU</string>
    <string name="dailyReward">Daily Reward</string>
    <string name="booster">Booster</string>
    <string name="task">Task</string>
    <string name="earn">Earn</string>
    <string name="wallet">Wallet</string>
    <string name="moriNews">Mori News</string>
    <string name="referral">Referral</string>
    <string name="exit">Exit</string>
    <string name="ChangePassword">Change</string>
    <string name="newPass">Create new password</string>
    <string name="jackpot">Jackpot</string>
    <string name="importantNews">Important News :</string>
    <string name="comingSoon">Coming soon</string>
    <string name="morimintUser">Morimint User</string>
    <string name="ads">Your Advertising</string>
    <string name="contentCreationRules">Content creation rules</string>
    <string name="taskTitle">Follow Us On Social Media :</string>

    <!-- Jackpot -->
    <string name="score">SCORE</string>
    <string name="chance">CHANCES</string>
    <string name="informationJackpot">More Information</string>

    <!-- NotificationModel -->

    <!-- Daily Reward -->
    <string name="dailyCheck">DAILY CHECK</string>
    <string name="check">CHECK</string>

    <!-- Booster -->
    <string name="xBooster">3X Booster</string>
    <string name="xxx">3X</string>
    <string name="payTransfer"><![CDATA[Pay & Transfer]]></string>


    <!-- Advertising -->
    <string name="applicationForm">Application Form</string>
    <string name="name">Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="company">Company Or Business Name:</string>
    <string name="addressLinkCompanySite">Website Or Social Network Address Link:</string>
    <string name="activeEmail">Active Email:</string>
    <string name="descRequest">Description Of The Request:</string>
    <string name="sendRequest">Send Request</string>
    <string name="copy">Copy</string>


    <string name="dailyRewardDesc">Login every day to claim your rewards!</string>
    <string name="Climb">Claim</string>
    <string name="bonusCode">Enter the code you already received in site</string>
    <string name="bonusCodeApp">Enter the code you already received</string>
    <string name="yourCode">Your Code</string>
    <string name="yourLevel">Tap Show Level</string>
    <string name="noData">No Data!</string>
    <string name="features">Features</string>
    <string name="roadmap">Roadmap</string>
    <string name="blue_tick">Blue tick features</string>
    <string name="SignInToSignUp">Don\'t have an account</string>
    <string name="RewardCode">Bonus Codes</string>
    <string name="dailyRewardInfo">Click to top button for claim your daily reward</string>
    <string name="walletConnection">Connect Wallet</string>
    <string name="walletDesc">Connect your TON wallet for claim rewards</string>
    <string name="walletTonKeeper">Based on Ton Keeper</string>
    <string name="moriAi">Mori AI Company</string>
    <string name="warning">Warning :</string>
    <string name="TonKeeper">Ton Keeper</string>
    <string name="previous">Previous</string>
    <string name="showAgain">Don\'t show again</string>
    <string name="earnCode">Earn Code Rewards</string>
    <string name="makeMoreMoney">More Coin :</string>
    <string name="ShowAd">Show ad</string>
    <string name="giftCode">Gift Code</string>
    <string name="codeMiniApp">Enter the code you got in the MiniApp</string>
    <string name="next">Next</string>

    <string name="notificationModel">Notification</string>
    <string name="default_notification_channel_id">BaseCHannelID</string>

</resources>