<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_app_bg"
        tools:context=".Activities.AdvertisingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/adsInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ads_info"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/cooperation"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:id="@+id/registerAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:scrollbars="none"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/advert_ic"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/applicationForm"
                    android:textColor="@color/white"
                    android:fontFamily="@font/opensans_bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/adsName"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/adsLastName"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/adsCompanyName"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="50dp"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/addressLinkCompanySite"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/addressLinkCompanySite"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="50dp"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/activeEmail"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/adsEmail"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:text="@string/descRequest"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/adsDesc"
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:maxLines="5"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@drawable/card_layout_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="@dimen/MaxWidthViews"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/signing_button_border">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/signing_button"
                        android:text="@string/sendRequest"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:fontFamily="@font/opensans_bold" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>