<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_app_bg"
        tools:context=".Activities.GiftCodeActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/earn_ic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/giftCode"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:drawableEnd="@drawable/icon_expand_more"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/RewardCode"
                    android:textColor="@color/white" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/card_layout_bg"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/bonusCode"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextCodeSite"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/card_layout_bg"
                        android:hint="@string/yourCode"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCheckCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/signing_button"
                        android:fontFamily="@font/opensans_bold"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:text="@string/check"
                        android:textColor="@color/white"
                        android:visibility="gone" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/card_layout_bg"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/bonusCodeApp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextCodeApp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/card_layout_bg"
                        android:hint="@string/yourCode"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCheckCodeApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/signing_button"
                        android:fontFamily="@font/opensans_bold"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:text="@string/check"
                        android:textColor="@color/white"
                        android:visibility="gone" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/card_layout_bg"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/codeMiniApp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextMiniApp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/card_layout_bg"
                        android:hint="@string/yourCode"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCheckCodeMiniApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/signing_button"
                        android:fontFamily="@font/opensans_bold"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:text="@string/check"
                        android:textColor="@color/white"
                        android:visibility="gone" />


                </androidx.appcompat.widget.LinearLayoutCompat>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>


        <com.startapp.sdk.ads.banner.Banner
            android:id="@+id/startapp_banner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</layout>