<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="400dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_app_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_back_activity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/newPass"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/SigningBackgroundFieldsWidth"
            android:layout_height="@dimen/SigningBackgroundFieldsHeight"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@color/Fields">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/SigningBackgroundFieldsHeight"
                android:layout_height="match_parent"
                android:background="@drawable/signing_icon_bg"
                android:padding="@dimen/SigningIconPadding"
                android:src="@drawable/icon_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/TextColor"
                android:textColorHint="@color/TextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/SigningMaxWidth"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/signing_button_border">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/signing_button"
                android:text="@string/ChangePassword"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>